src/components/CookieNotice/CookieNotice.module.css
.container {
    position: fixed;
    bottom: 0;
    width: 100%;
    background: #000000;
    font-family: Roboto, Arial, sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 24px;
    color: #FFFFFF;
}

.text {
    display: inline-block;
    margin: 2.5vh 2vw;
}

.link {
    text-decoration: none;
}

.link:visited {
    color: #FFFFFF;
}

.button {
    position: absolute;
    right: 2vw;
    top: 1.5vh;
    width: 167px;
    height: 40px;
    background: #FFFFFF;
    border: none;
    border-radius: 5px;
    font-size: 14px;
    color: #000000;
}

